--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -7,13 +7,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.stevetran.pantryraider.Pantry.PantryActivity">
+    tools:context="com.example.stevetran.pantryraider.Setting.SettingActivity">
 
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <!-- Middle section (body) -->
         <RelativeLayout
