--- a/app/src/main/res/layout/fragment_saved_recipe.xml
+++ b/app/src/main/res/layout/fragment_saved_recipe.xml
@@ -19,5 +19,6 @@
     <ListView
         android:id="@+id/SavedRecipeList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"/>
 </LinearLayout>
