--- a/app/src/main/res/layout/fragment_pantry.xml
+++ b/app/src/main/res/layout/fragment_pantry.xml
@@ -22,9 +22,6 @@ android:layout_height="match_parent">
     android:id="@+id/buttonMyRecipes"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignEnd="@+id/buttonMyIngredients"
-    android:layout_alignStart="@+id/buttonMyIngredients"
-    android:layout_below="@+id/buttonMyIngredients"
     android:layout_marginTop="51dp"
     android:layout_weight="1"
     android:backgroundTint="@android:color/holo_orange_dark"
@@ -44,7 +41,7 @@ android:layout_height="match_parent">
     android:textAlignment="center" />
 
 <Button
-    android:id="@+id/buttonMyIngredients"
+    android:id="@+id/myIngredientsButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/pantyMainText"
