--- a/app/src/main/res/layout/fragment_my_ingredients.xml
+++ b/app/src/main/res/layout/fragment_my_ingredients.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,26 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/addIngredientsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Ingredients"
-            tools:layout_editor_absoluteX="224dp"
-            tools:layout_editor_absoluteY="33dp" />
-
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="368dp"
             android:layout_height="551dp"
             android:orientation="vertical"
-            tools:layout_editor_absoluteY="33dp"
-            tools:layout_editor_absoluteX="8dp">
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="33dp">
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="MyIngredients" />
+
+            <Button
+                android:id="@+id/addIngredientsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Add Ingredients"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout"
+                app:layout_constraintVertical_bias="0.104" />
 
             <ListView
                 android:id="@+id/MyIngredients"
