--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="12dp"
         android:gravity="center"
         android:text="Confirm Password:"
-        app:layout_constraintTop_toTopOf="@+id/editText5"
+        app:layout_constraintTop_toTopOf="@+id/CPretypepassword"
         android:layout_marginLeft="-14dp"
         app:layout_constraintLeft_toLeftOf="@+id/textView3" />
 
@@ -40,7 +40,7 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/CPoldpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -57,40 +57,40 @@
         app:layout_constraintVertical_bias="0.692" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/CPnewpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
         android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/editText2"
+        app:layout_constraintRight_toRightOf="@+id/CPoldpassword"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         android:layout_marginBottom="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
+        app:layout_constraintTop_toBottomOf="@+id/CPoldpassword"
         app:layout_constraintVertical_bias="0.0"
         android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText2" />
+        app:layout_constraintLeft_toLeftOf="@+id/CPoldpassword" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/CPretypepassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
         android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/editText4"
+        app:layout_constraintRight_toRightOf="@+id/CPnewpassword"
         android:layout_marginTop="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText4"
+        app:layout_constraintTop_toBottomOf="@+id/CPnewpassword"
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.0"
         android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText4"
+        app:layout_constraintLeft_toLeftOf="@+id/CPnewpassword"
         app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
-        android:id="@+id/ChangePassword"
+        android:id="@+id/BtnChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
