--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/editText2"
+        android:id="@+id/CPoldpassword"
         android:layout_width="match_parent"
         android:hint="Search Recipe..."
         android:layout_alignParentEnd="true" />
@@ -22,7 +22,7 @@
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:id="@+id/button2"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/CPoldpassword"
         android:layout_alignParentStart="true" />
 
     <Button
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/searchButton"
         android:layout_width="170dp"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/CPoldpassword"
         android:layout_alignParentEnd="true" />
 
     <ListView
